Bug 1834786 - Don't return cached stylesheets if the sheet principal doesn't match. r=dholbert

Otherwise stuff accessing stylesheets from a sandbox and content might
conflict, and we might incorrectly deny giving access to a CSSStyleSheet's
rules.

Differential Revision: https://phabricator.services.mozilla.com/D178971